--- a/ana_delightoutput/notebooks/test_gp/test_utils.ipynb
+++ b/ana_delightoutput/notebooks/test_gp/test_utils.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "1344a030",
+   "id": "15ce76fe",
    "metadata": {},
    "source": [
     "# Test Utils"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "8389f41c",
+   "id": "55926947",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "ba93e64a",
+   "id": "277b1e97",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,17 +36,17 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1245bd85",
+   "cell_type": "markdown",
+   "id": "de09b7bd",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Luminosity Distance"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "a11d286d",
+   "id": "16ef0d71",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +62,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "06502a0f",
+   "id": "5e622572",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,32 +70,86 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "bc4599c0",
+   "metadata": {},
+   "source": [
+    "# X\n",
+    "\n",
+    "\n",
+    "- each galaxy:\n",
+    "\n",
+    "- series of band number\n",
+    "- redshift \n",
+    "- luminosity factor"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "353452e5",
+   "execution_count": 17,
+   "id": "e059f849",
    "metadata": {},
    "outputs": [],
    "source": [
     "def test_random_X():\n",
     "    size = 10\n",
     "    X = random_X_bzl(size, numBands=5, redshiftMax=3.0)\n",
-    "    assert X.shape == (size, 3)\n"
+    "    assert X.shape == (size, 3)\n",
+    "    return X\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "69f2b379",
+   "execution_count": 18,
+   "id": "e707d25e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "test_random_X()"
+    "my_X=test_random_X()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "a35b16d4",
+   "execution_count": 19,
+   "id": "d233b626",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[2.        , 2.61255729, 1.6659364 ],\n",
+       "       [2.        , 0.84709004, 8.30901241],\n",
+       "       [3.        , 1.63319522, 1.60018817],\n",
+       "       [1.        , 1.85445865, 4.22032986],\n",
+       "       [2.        , 2.67952122, 8.60220811],\n",
+       "       [1.        , 1.1254082 , 1.60323513],\n",
+       "       [0.        , 2.17401963, 3.75437558],\n",
+       "       [2.        , 1.33965448, 9.85252369],\n",
+       "       [0.        , 1.73222746, 8.07912821],\n",
+       "       [3.        , 2.79667415, 3.77591693]])"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "my_X"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "491d9263",
+   "metadata": {},
+   "source": [
+    "# Flux likelihood"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "702a5158",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,15 +167,10 @@
     "        ell_hat, ell_var = np.ones((nz, )), 0.01*np.ones((nz, ))\n",
     "\n",
     "        t1 = time()\n",
-    "        res1 = approx_flux_likelihood(\n",
-    "            f_obs, f_obs_var, f_mod, f_mod_covar=f_mod_covar,\n",
-    "            ell_hat=ell_hat, ell_var=ell_var)\n",
+    "        res1 = approx_flux_likelihood(f_obs, f_obs_var, f_mod, f_mod_covar=f_mod_covar,ell_hat=ell_hat, ell_var=ell_var)\n",
     "        t2 = time()\n",
     "        res2 = np.zeros_like(res1)\n",
-    "        approx_flux_likelihood_cy(\n",
-    "            res2, nz, nt, nf,\n",
-    "            f_obs, f_obs_var, f_mod, f_mod_covar,\n",
-    "            ell_hat, ell_var)\n",
+    "        approx_flux_likelihood_cy(res2, nz, nt, nf,f_obs, f_obs_var, f_mod, f_mod_covar,ell_hat, ell_var)\n",
     "        t3 = time()\n",
     "        print(t2-t1, t3-t2)\n",
     "        np.allclose(res1, res2, rtol=relative_accuracy)"
@@ -130,7 +179,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "7e08230c",
+   "id": "6383db06",
    "metadata": {},
    "outputs": [
     {
@@ -148,9 +197,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c26259ea",
+   "metadata": {},
+   "source": [
+    "# Approximate Flux likelihood"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "1732cf3e",
+   "id": "58b6ffcf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,7 +245,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "3274f49b",
+   "id": "f7db53df",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -198,7 +255,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "589263a5",
+   "id": "b5b4ff26",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -234,7 +291,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "5bfc7c20",
+   "id": "23b1d171",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -244,7 +301,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "cd0288e5",
+   "id": "fca19ce7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -272,7 +329,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "d1be1c6b",
+   "id": "8cd6d72f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -282,7 +339,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e596a81f",
+   "id": "13d89b78",
    "metadata": {},
    "outputs": [],
    "source": []
