--- a/ana_delightoutput/notebooks/test_delight_optimize/test_delightoptimize_descdc2.ipynb
+++ b/ana_delightoutput/notebooks/test_delight_optimize/test_delightoptimize_descdc2.ipynb
@@ -2,15 +2,15 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "b33f27ab",
+   "id": "98d5d602",
    "metadata": {},
    "source": [
-    "# Test Delight Optimize"
+    "# Test Delight Optimize for DC2 data"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "a9c4dd44",
+   "id": "bcd4913f",
    "metadata": {},
    "source": [
     "- author : Sylvie Dagoret-Campagne\n",
@@ -22,8 +22,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "21063f99",
+   "execution_count": 3,
+   "id": "8e4f7748",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,8 +42,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "f142dcf3",
+   "execution_count": 4,
+   "id": "782da6a2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,8 +53,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "d8be65f5",
+   "execution_count": 5,
+   "id": "998a73d3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,8 +64,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "03105a5e",
+   "execution_count": 6,
+   "id": "7e050777",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ae2e137f",
+   "id": "024d603a",
    "metadata": {},
    "source": [
     "# Configuration\n",
@@ -88,8 +88,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "da04e31a",
+   "execution_count": 7,
+   "id": "0f1a7d6a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,8 +98,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "a2a9f2e4",
+   "execution_count": 8,
+   "id": "a1e0fe19",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,8 +110,35 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "cf6d0241",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "configfileparamdir=\"tmp\"\n",
+    "configfilerootname=\"parametersTest_\"\n",
+    "Nconfigfilenum = 21"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "4a84f586",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "configFileList = []\n",
+    "\n",
+    "for idx in np.arange(1,Nconfigfilenum+1):\n",
+    "    configfilename=configfilerootname+str(idx)+\".cfg\"\n",
+    "    configfullfilename = os.path.join(configfileparamdir,configfilename)\n",
+    "    configFileList.append(configfullfilename)"
+   ]
+  },
+  {
    "cell_type": "markdown",
-   "id": "8b136f8a",
+   "id": "7e8af2c9",
    "metadata": {},
    "source": [
     "# Load config and data"
@@ -120,7 +147,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "ce3957dc",
+   "id": "d0ddc944",
    "metadata": {},
    "outputs": [
     {
@@ -148,7 +175,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "90ed1e64",
+   "id": "4233b27d",
    "metadata": {},
    "source": [
     "## Read filter coefficients, compute normalization of filters"
@@ -157,7 +184,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "d35b4059",
+   "id": "49eb0ec0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -169,7 +196,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cc10aa0a",
+   "id": "9ad6f595",
    "metadata": {},
    "source": [
     "## Read SED"
@@ -178,7 +205,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "0a45ff5a",
+   "id": "4987cbfd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -189,7 +216,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "82a53df0",
+   "id": "4bb86a96",
    "metadata": {},
    "source": [
     "## Load Model"
@@ -198,7 +225,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "e3959cea",
+   "id": "613fb043",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -215,7 +242,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "26a3e42a",
+   "id": "f8608313",
    "metadata": {},
    "source": [
     "## Check config"
@@ -224,7 +251,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "862a2b72",
+   "id": "aa53a5f7",
    "metadata": {},
    "outputs": [
     {
@@ -258,7 +285,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d7aff908",
+   "id": "c1dc72ad",
    "metadata": {},
    "source": [
     "## Optimize"
@@ -267,7 +294,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c30d046e",
+   "id": "f33a555f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -436,7 +463,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4bf1c3cd",
+   "id": "cfe3771a",
    "metadata": {},
    "outputs": [],
    "source": []
