--- a/ana_delightoutput/notebooks/test_delight_optimize/test_delightoptimize_sim.ipynb
+++ b/ana_delightoutput/notebooks/test_delight_optimize/test_delightoptimize_sim.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "2ee49b21",
+   "id": "3379f3c6",
    "metadata": {},
    "source": [
     "# Test Delight Optimize for Simulated data"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "08209966",
+   "id": "a7ddc8fe",
    "metadata": {},
    "source": [
     "- author : Sylvie Dagoret-Campagne\n",
@@ -23,7 +23,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "16377cb7",
+   "id": "e5980ff6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "8f63c1cf",
+   "id": "091a3890",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "0b806586",
+   "id": "13340900",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +65,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "881aec0f",
+   "id": "ee8fd636",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "61891bf2",
+   "id": "b90963b2",
    "metadata": {},
    "source": [
     "# Configuration\n",
@@ -89,7 +89,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "f0bd06d8",
+   "id": "32706aee",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +99,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "d7dfe49e",
+   "id": "485f81ab",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9664d3dd",
+   "id": "c8d8d6e4",
    "metadata": {},
    "source": [
     "# Load config and data"
@@ -120,7 +120,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "968718e3",
+   "id": "b5f69afb",
    "metadata": {},
    "outputs": [
     {
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "73d01c08",
+   "id": "a0fbfca6",
    "metadata": {},
    "source": [
     "## Read filter coefficients, compute normalization of filters"
@@ -157,7 +157,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "62c56aa5",
+   "id": "ce8bba3e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "96669e60",
+   "id": "5d8f1628",
    "metadata": {},
    "source": [
     "## Read SED"
@@ -177,7 +177,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "9a73edb7",
+   "id": "2d5c3323",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c6c8ef1a",
+   "id": "c8cffecc",
    "metadata": {},
    "source": [
     "## Load Model"
@@ -197,7 +197,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "f3a5d888",
+   "id": "17dcfa4c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a33d3259",
+   "id": "590b9199",
    "metadata": {},
    "source": [
     "## Check config"
@@ -222,7 +222,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "8827e301",
+   "id": "9116e068",
    "metadata": {},
    "outputs": [
     {
@@ -243,7 +243,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "ea029233",
+   "id": "680abd59",
    "metadata": {},
    "outputs": [
     {
@@ -264,7 +264,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2ff43652",
+   "id": "2c193418",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -274,7 +274,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "b4bef0dc",
+   "id": "9966b45e",
    "metadata": {},
    "outputs": [
     {
@@ -308,7 +308,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "13e2746f",
+   "id": "921f86ae",
    "metadata": {},
    "source": [
     "## Optimize"
@@ -317,7 +317,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "69f1ca5c",
+   "id": "3b6f59fb",
    "metadata": {},
    "outputs": [
     {
@@ -531,48 +531,61 @@
     "            gp.var_L = V_L\n",
     "            loc = - 1\n",
     "            \n",
-    "            # loop on training \n",
+    "            # loop on training , index being loc\n",
     "            trainingDataIter = getDataFromFile(params, 0, numObjectsTraining,prefix=\"training_\", getXY=True)\n",
-    "            for z, normedRefFlux, bands, fluxes,\\\n",
-    "                fluxesVar, bCV, fCV, fvCV, X, Y, Yvar\\\n",
-    "                    in trainingDataIter:\n",
+    "            for z, normedRefFlux, bands, fluxes,fluxesVar, bCV, fCV, fvCV, X, Y, Yvar in trainingDataIter:\n",
     "                loc += 1\n",
     "                redshifts[loc] = z\n",
+    "                \n",
+    "                # the latent model\n",
     "                themod = np.zeros((1, f_mod_grid.shape[1], bands.size))\n",
     "                for it in range(f_mod_grid.shape[1]):\n",
     "                    for ib, band in enumerate(bands):\n",
     "                        themod[0, it, ib] = np.interp(z, redshiftGrid,\n",
     "                                                      f_mod_grid[:, it, band])\n",
+    "                # find scale\n",
     "                chi2_grid, theellMLs = scalefree_flux_likelihood(\n",
     "                    fluxes,\n",
     "                    fluxesVar,\n",
     "                    themod,\n",
     "                    returnChi2=True\n",
     "                )\n",
+    "                # find best template for traning\n",
     "                bestTypes[loc] = np.argmin(chi2_grid)\n",
+    "                # find luminosity factor\n",
     "                ellMLs[loc] = theellMLs[0, bestTypes[loc]]\n",
     "                X[:, 2] = ellMLs[loc]\n",
+    "                # Configure the GP with that training sample\n",
     "                gp.setData(X, Y, Yvar, bestTypes[loc]) # save GP model\n",
+    "                \n",
+    "                # fill the predicted mean and covariance\n",
+    "                # first index : redshift\n",
+    "                # second index : tranning number\n",
+    "                # third index : the band\n",
     "                model_mean[:, loc, :], model_covar[:, loc, :] = gp.predictAndInterpolate(redshiftGrid, ell=ellMLs[loc])\n",
     "\n",
+    "            # loop on redshiftSigma (used only for )    \n",
     "            for redshiftSigma in [0.1, 1.0]:\n",
     "\n",
     "                loc = - 1\n",
     "                targetDataIter = getDataFromFile(params, 0, numObjectsTarget,prefix=\"target_\", getXY=False)\n",
     "\n",
+    "                # book array of metrics\n",
     "                bias_zmap = np.zeros((redshiftDistGrid.size, ))\n",
     "                bias_zmean = np.zeros((redshiftDistGrid.size, ))\n",
-    "                confFractions = np.zeros((numConfLevels,\n",
-    "                                          redshiftDistGrid.size))\n",
+    "                confFractions = np.zeros((numConfLevels,redshiftDistGrid.size))\n",
     "                binnobj = np.zeros((redshiftDistGrid.size, ))\n",
     "                bias_nz = np.zeros((redshiftDistGrid.size, ))\n",
-    "                stackedPdfs = np.zeros((redshiftGrid.size,\n",
-    "                                        redshiftDistGrid.size))\n",
+    "                stackedPdfs = np.zeros((redshiftGrid.size,redshiftDistGrid.size))\n",
     "                cis = np.zeros((numObjectsTarget, ))\n",
     "                zmeanBinLocs = np.zeros((numObjectsTarget, ), dtype=int)\n",
+    "                \n",
+    "                # loop on targets\n",
     "                for z, normedRefFlux, bands, fluxes, fluxesVar, bCV, fCV, fvCV in targetDataIter:\n",
-    "                    loc += 1\n",
-    "                    like_grid = np.zeros((model_mean.shape[0],model_mean.shape[1]))\n",
+    "                    loc += 1  # refered by loc\n",
+    "                    like_grid = np.zeros((model_mean.shape[0],model_mean.shape[1])) # book likelihood\n",
+    "                    \n",
+    "                    # check this\n",
     "                    ell_hat_z = normedRefFlux * 4 * np.pi * params['fluxLuminosityNorm'] * (DL(redshiftGrid)**2. * (1+redshiftGrid))\n",
     "                    ell_hat_z[:] = 1\n",
     "                    # compute likelihood\n",
@@ -583,6 +596,8 @@
     "                        model_mean[:, :, bands],\n",
     "                        V_C*model_covar[:, :, bands],\n",
     "                        ell_hat_z, (ell_hat_z*ellPriorSigma)**2)\n",
+    "                    \n",
+    "                    \n",
     "                    # multiply likelihood by prior\n",
     "                    like_grid *= np.exp(-0.5*((redshiftGrid[:, None] - redshifts[None, :])/ redshiftSigma)**2)\n",
     "                    # final pdf for the target\n",
@@ -591,14 +606,14 @@
     "                    if pdf.sum() == 0:\n",
     "                        print(\"NULL PDF with galaxy\", loc)\n",
     "                        \n",
-    "                    # compute metrics    \n",
+    "                    # compute metrics  for that target  \n",
     "                    if pdf.sum() > 0:\n",
     "                        metrics = computeMetrics(z, redshiftGrid, pdf,params['confidenceLevels'])\n",
     "                        ztrue, zmean, zstdzmean, zmap, zstdzmean,pdfAtZ, cumPdfAtZ = metrics[0:7]\n",
     "                        confidencelevels = metrics[7:]\n",
     "                        zmeanBinLoc = -1\n",
     "                        \n",
-    "                        # loop on redshift bins\n",
+    "                        # loop on redshift bins for histograms on metrics\n",
     "                        for i in range(numZbins):\n",
     "                            if zmean >= redshiftDistGrid[i] and zmean < redshiftDistGrid[i+1]:\n",
     "                                zmeanBinLoc = i\n",
@@ -617,6 +632,7 @@
     "                        stackedPdfs[:, zmeanBinLoc] += pdf / numObjectsTraining\n",
     "                        ind = pdf >= pdfAtZ\n",
     "                        \n",
+    "                        # normalize the pdf\n",
     "                        pdf /= np.trapz(pdf, x=redshiftGrid)\n",
     "                        cis[loc] = np.trapz(pdf[ind], x=redshiftGrid[ind])\n",
     "\n",
@@ -672,7 +688,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "093170d9",
+   "id": "2852f01c",
    "metadata": {},
    "outputs": [],
    "source": []
