update use optimize

--- a/delight_optimize/delightscripts/delight-optimize.ipynb
+++ b/delight_optimize/delightscripts/delight-optimize.ipynb
@@ -290,7 +290,15 @@
       " =======================================\n",
       "  ellSTD 1.0 fluxError 0.01 V_C 1.0 zSTD 1.0\n",
       "-------------------------------->>  0.554\n",
-      ">>  0.684   0.627   0.557   0.688   0.649   0.503   0.53   0.508   0.501   0.254   0.255   0.294   0.519   0.653   0.94 "
+      ">>  0.684   0.627   0.557   0.688   0.649   0.503   0.53   0.508   0.501   0.254   0.255   0.294   0.519   0.653   0.94 \n",
+      " =======================================\n",
+      "  ellSTD 10.0 fluxError 0.01 V_C 0.1 zSTD 0.1\n",
+      "-------------------------------->>  0.566\n",
+      ">>  0.656   0.617   0.537   0.708   0.646   0.511   0.532   0.52   0.523   0.323   0.337   0.426   0.68   0.773   0.813 \n",
+      " =======================================\n",
+      "  ellSTD 10.0 fluxError 0.01 V_C 0.1 zSTD 1.0\n",
+      "-------------------------------->>  0.554\n",
+      ">>  0.683   0.63   0.578   0.691   0.648   0.506   0.514   0.484   0.502   0.254   0.272   0.335   0.588   0.856   0.953 "
      ]
     }
    ],
