--- a/ana_delightoutput/notebooks/SED/delight_sed_and_filters.ipynb
+++ b/ana_delightoutput/notebooks/SED/delight_sed_and_filters.ipynb
@@ -15,7 +15,10 @@
     "- affiliation : IJCLab/IN2P3/CNES, DESC-LSST fullmember, behalf AuxTel Teal VERA C. Rubin observatory\n",
     "- Creation date : April 4th th 2021\n",
     "- Update October 23th 2021\n",
-    "- **CCIN2P3 : kernel anaconda3pbspzrail**"
+    "- **CCIN2P3 : kernel anaconda3pbspzrail**\n",
+    "\n",
+    "\n",
+    "- Last verification : January 5th 2022"
    ]
   },
   {
@@ -52,12 +55,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## SED"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from pkg_resources import resource_filename"
+    "basedelight_datapath_sed = \"../../../data/SED\" "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### CWW SED"
    ]
   },
   {
@@ -66,7 +83,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "basedelight_datapath = resource_filename('delight', '../data')"
+    "#ls ../data/BROWN_SEDs"
    ]
   },
   {
@@ -75,14 +92,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "basedelight_datapath= \"../tmp/delight_indata\""
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# CWW SED"
+    "files_sed_cww=[\"El_B2004a.dat\",\"SB2_B2004a.dat\",\"Sbc_B2004a.dat\",\"ssp_25Myr_z008.dat\",\"Im_B2004a.dat\",\"SB3_B2004a.dat\",\"Scd_B2004a.dat\",\"ssp_5Myr_z008.dat\"]"
    ]
   },
   {
@@ -91,26 +101,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#ls ../data/BROWN_SEDs"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "files_sed_cww=[\"El_B2004a.dat\",\"SB2_B2004a.dat\",\"Sbc_B2004a.dat\",\"ssp_25Myr_z008.dat\",\"Im_B2004a.dat\",\"SB3_B2004a.dat\",\"Scd_B2004a.dat\",\"ssp_5Myr_z008.dat\"]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "data_sed_cww= []\n",
-    "topdir = os.path.join(basedelight_datapath,\"CWW_SEDs\")\n",
+    "topdir = os.path.join(basedelight_datapath_sed,\"CWW_SEDs\")\n",
     "\n",
     "for file in files_sed_cww:\n",
     "    fullfilename=os.path.join(topdir,file)\n",
@@ -120,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -129,7 +121,7 @@
        "(0.01, 100.0)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -162,8 +154,24 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Filters"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "basedelight_datapath = \"../../../data\" "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -181,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -205,7 +213,7 @@
        "(300.0, 1200.0)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -244,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -301,9 +309,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "anaconda3pbs",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "anaconda3_pbs"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -315,7 +323,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.9.7"
   },
   "toc": {
    "base_numbering": 1,
