--- a/ana_delightoutput/notebooks/SED/delight_sed.ipynb
+++ b/ana_delightoutput/notebooks/SED/delight_sed.ipynb
@@ -15,7 +15,12 @@
     "- affiliation : IJCLab/IN2P3/CNES, DESC-LSST fullmember, behalf AuxTel Teal VERA C. Rubin observatory\n",
     "- Creation date : February 28th 2021\n",
     "- Update : October 23th 2021\n",
-    "- **CCIN2P3 : kernel anaconda3pbspzrail**"
+    "- **CCIN2P3 : kernel anaconda3pbspzrail**\n",
+    "\n",
+    "\n",
+    "- Use filters originally in Delight (Not DC2 filters)\n",
+    "\n",
+    "- Last verification : January 5th 2022"
    ]
   },
   {
@@ -52,12 +57,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## SED"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from pkg_resources import resource_filename"
+    "basedelight_datapath_sed = \"../../../data/SED\" "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## # CWW SED"
    ]
   },
   {
@@ -66,7 +85,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "basedelight_datapath = resource_filename('delight', '../data')"
+    "#ls ../data/BROWN_SEDs"
    ]
   },
   {
@@ -75,14 +94,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "basedelight_datapath = \"../tmp/delight_indata\""
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# CWW SED"
+    "files_sed_cww=[\"El_B2004a.dat\",\"SB2_B2004a.dat\",\"Sbc_B2004a.dat\",\"ssp_25Myr_z008.dat\",\"Im_B2004a.dat\",\"SB3_B2004a.dat\",\"Scd_B2004a.dat\",\"ssp_5Myr_z008.dat\"]"
    ]
   },
   {
@@ -91,26 +103,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#ls ../data/BROWN_SEDs"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "files_sed_cww=[\"El_B2004a.dat\",\"SB2_B2004a.dat\",\"Sbc_B2004a.dat\",\"ssp_25Myr_z008.dat\",\"Im_B2004a.dat\",\"SB3_B2004a.dat\",\"Scd_B2004a.dat\",\"ssp_5Myr_z008.dat\"]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "data_sed_cww= []\n",
-    "topdir = os.path.join(basedelight_datapath,\"CWW_SEDs\")\n",
+    "topdir = os.path.join(basedelight_datapath_sed,\"CWW_SEDs\")\n",
     "\n",
     "for file in files_sed_cww:\n",
     "    fullfilename=os.path.join(topdir,file)\n",
@@ -120,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -129,7 +123,7 @@
        "(0.01, 100.0)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -165,12 +159,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Brown SED"
+    "### Brown SED"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -180,17 +174,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "topdir = os.path.join(basedelight_datapath,\"BROWN_SEDs\")"
+    "topdir = os.path.join(basedelight_datapath_sed,\"BROWN_SEDs\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -199,20 +192,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['NGC_4450_spec.dat',\n",
-       " 'UGC_04881_spec.dat',\n",
-       " 'NGC_4569_spec.dat',\n",
-       " 'NGC_0855_spec.dat',\n",
-       " 'III_Zw_035_spec.dat']"
+       "['NGC_4631_spec.dat',\n",
+       " 'NGC_1068_spec.dat',\n",
+       " 'UGC_08696_spec.dat',\n",
+       " 'IC_4553_spec.dat',\n",
+       " 'UGCA_410_spec.dat']"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -223,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -232,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -241,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -250,12 +243,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "data_sed_brown= []\n",
-    "topdir = os.path.join(basedelight_datapath,\"BROWN_SEDs\")\n",
+    "topdir = os.path.join(basedelight_datapath_sed,\"BROWN_SEDs\")\n",
     "\n",
     "for file in files_sed_brown:\n",
     "    fullfilename=os.path.join(topdir,file)\n",
@@ -265,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -274,7 +267,7 @@
        "(2e-16, 2e-12)"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -316,9 +309,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "anaconda3pbspzrail",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "anaconda3_pbs_pzrail"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -330,7 +323,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.9.7"
   },
   "toc": {
    "base_numbering": 1,
